--- a/wrappers/alignment_chip_multiqc/env.yaml
+++ b/wrappers/alignment_chip_multiqc/env.yaml
@@ -1,3 +1,4 @@
+name: alignment_chip_multiqc
 channels:
   - conda-forge
   - bioconda
@@ -5,6 +6,6 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - multiqc = 1.11
+  - multiqc = 1.14
   - python = 3.7
   - time = 1.8
