--- a/wrappers/alignment_bwa/env.yaml
+++ b/wrappers/alignment_bwa/env.yaml
@@ -1,4 +1,3 @@
-name: alignment_chip_multiqc
 channels:
   - conda-forge
   - bioconda
@@ -6,6 +5,6 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - multiqc = 1.17
-  - python = 3.9
+  - samtools = 1.12
+  - bwa = 0.7.17
   - time = 1.8
