--- a/wrappers/max_length_filter/env.yaml
+++ b/wrappers/max_length_filter/env.yaml
@@ -1,4 +1,3 @@
-name: alignment_chip_multiqc
 channels:
   - conda-forge
   - bioconda
@@ -6,6 +5,7 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - multiqc = 1.17
-  - python = 3.9
+  - samtools = 1.19
   - time = 1.8
+
+
